# pixel-hawk

./: .env.example  .gitignore  CLAUDE.md  MIGRATION.md  README.md  TASKS.md  TODO.md  config.example.toml  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: deploy.yaml  deploy.yml
docs/: DISCORD_BOT_DESIGN.md  DISCORD_BOT_TASKS.md  GLOSSARY.md  TASKS.md  list-projects-command.md
scripts/: add_project.py  install-service.sh  kill-db-handles.ps1  migrate_old_projects.py  rebuild.py
src/cam/: __init__.py  config.py  geometry.py  ingest.py  main.py  metadata.py  palette.py  projects.py  queues.py
src/pixel_hawk/: __init__.py  bot.py  commands.py  config.py  db.py  geometry.py  ingest.py  interactions.py  main.py  metadata.py  models.py  palette.py  projects.py  queues.py
src/pixel_hawk/interface/: access.py  commands.py  interactions.py  watch.py
src/pixel_hawk/migrations/models/: 0_20260215003002_init.py  0_20260215132054_init.py  0_20260216130601_init.py  0_20260216131700_init.py  1_20260216191202_bot_v0.py  2_20260216123454_rename_tables_and_columns.py  2_20260218011810_remove_tile_json_fields.py  3_20260216125725_rename_temperature.py  3_20260223022500_guild_config.py  4_20260223120000_quotas.py  5_20260224200000_watch_message.py
src/pixel_hawk/models/: _sql.py  config.py  db.py  entities.py  griefing.py  guild.py  painters.py  palette.py  person.py  project.py  tile.py  watch.py
src/pixel_hawk/watcher/: ingest.py  metadata.py  projects.py  queues.py
src/wwpppp/: __init__.py  ingest.py  main.py  palette.py  projects.py  queues.py
tests/: conftest.py  test_bot.py  test_cache_and_projects_extra.py  test_commands.py  test_config.py  test_geometry.py  test_ingest.py  test_interactions.py  test_main.py  test_main_and_misc.py  test_main_watch_and_stitch.py  test_metadata.py  test_multiuser.py  test_palette.py  test_projects.py  test_projects_more.py  test_queues.py
tests/interface/: rue.wplace  test_access.py  test_commands.py  test_interactions.py  test_watch.py
tests/models/: test_config.py  test_db.py  test_entities.py  test_geometry.py  test_griefing.py  test_palette.py
tests/watcher/: test_ingest.py  test_metadata.py  test_projects.py  test_queues.py
