[project]
name = "pixel-hawk"
version = "0.1.0"
description = "Pixel Hawk - WPlace paint project change tracker"
authors = [
    { name = "Liz Balbuena" }
]
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "ruamel-yaml>=0.19.1",
]

[project.scripts]
pixel-hawk = "pixel_hawk.main:main"

[tool.ruff]
line-length = 120

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "mypy>=1.14.0",
    "pytest-mypy>=0.10.3",
    "types-requests>=2.32.4.20260107",
]

[tool.pytest.ini_options]
addopts = "--cov=pixel_hawk --cov-report=term-missing --cov-fail-under=95 -q"
python_files = ["tests/*.py"]
testpaths = ["tests"]

[tool.coverage.run]
data_file = ".pytest_cache/.coverage"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
files = ["src/pixel_hawk"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
